fixing margin alignment for all components

--- a/public/styles.css
+++ b/public/styles.css
@@ -31,11 +31,11 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  color:grey;
+  color: white;
 }
 
 .icon:hover {
-  color: white;
+  color: grey;
 }
 
 .title,
@@ -45,8 +45,8 @@
   display: flex;
   margin: 20px;
   text-align: left;
-  margin-left: 18%;
-  margin-right: 18%;
+  margin-left: 14%;
+  margin-right: 15%;
 }
 
 .compare {
@@ -144,7 +144,7 @@
 .fa-chevron-left {
   position: absolute;
   top: 50%;
-  left: 15%;
+  left: 12%;
   z-index: 2;
 }
 
